# llm-backend

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  backend_pre_start.py  custom_logging.py  docker-compose.yml  main.py  model.py  pyproject.toml  start.py
alembic/: env.py
alembic/versions/: e06583a002a0_init_user_model4.py
api/: deps.py  main.py
api/routes/: llm.py  wx.py
backend/: .env  Dockerfile  backend_pre_start.py  main.py  model.py  pyproject.toml  start.py  test.py
backend/alembic/versions/: 0cc55d5d17e8_init.py  123b5ce6c91d_add_tabe_useraction.py  3c52fbceae74_add_log.py  3f7a353a4d5e_init3.py  530d81d9d894_init_user_model2.py  80e92282107d_init2.py  91d963aabb17_init_user_model5.py  b799c877e080_init.py  d1f8c9d93603_init_user_model3.py  d8d4ad342e9e_init_model.py  eb4eb2ebdb3d_init_user_model.py
backend/api/: deps.py  main.py  type.py
backend/api/routes/: llm.py  wx.py
backend/api/routes/bms/: deps.py  llmTemp.py  type.py
backend/api/routes/wechat_miniprogram/: deps.py  llm.py  type.py  wx.py
backend/core/: config.py  db.py  security.py
backend/llm/: main.py
backend/scripts/: prestart.sh
backend/utils/: nacos_helper.py  net_utils.py  scheduler_helper.py
config/: config.py  db.py
core/: config.py  db.py  security.py
frontent/: package.json
nacos-data/snapshot/: ai_model+DEFAULT_GROUP+
scheduler/: Dockerfile  main.py  model.py  pyproject.toml
scheduler/config/: config.py  db.py
scheduler/models/: user.py
scheduler/tasks/: user_tasks.py
scheduler/utils/: scheduler_manager.py
scripts/: prestart.sh
