[project]
name = "scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler==3.10.1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "loguru>=0.7.3",
]
